# Sandroid_core

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MIGRATION.md  README.md  SETUP.md  build_and_export_docker.sh  genindex.html  groundtruthapk.html  index.html  install-requirements.sh  instructions.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  sandroid  sandroid.config.html  sandroid.html  search.html  searchindex.js  set_avd_location.py  src.datagather.html  src.functionality.html  src.html  src.utils.html
.github/workflows/: docs.yml  lint.yml  publish.yml  pypi-publish.yml
_sources/: instructions.md.txt  modules.rst.txt  sandroid.config.rst.txt  sandroid.rst.txt  src.functionality.rst.txt  src.rst.txt
_static/: agogo.css
deploy/: README.md  create_avd.py  deploy
docker/: docker_welcome_message  dockerfile  requirements.txt
docs/: conf.py  groundtruthapk.md  index.rst  src.datagather.rst  src.utils.rst
docs/_build/doctrees/: environment.pickle  groundtruthapk.doctree  index.doctree  instructions.doctree  modules.doctree  src.datagather.doctree  src.doctree  src.functionality.doctree  src.utils.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/src/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/changedfiles/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/datagather/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/deletedfiles/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/malwaremonitor/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/network/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/newfiles/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/processes/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/sockets/: index.doctree
docs/_build/doctrees/autoapi/src/datagather/static_analysis/: index.doctree
docs/_build/doctrees/autoapi/src/functionality/: index.doctree
docs/_build/doctrees/autoapi/src/functionality/functionality/: index.doctree
docs/_build/doctrees/autoapi/src/functionality/player/: index.doctree
docs/_build/doctrees/autoapi/src/functionality/recorder/: index.doctree
docs/_build/doctrees/autoapi/src/functionality/screenshot/: index.doctree
docs/_build/doctrees/autoapi/src/functionality/trigdroid/: index.doctree
docs/_build/doctrees/autoapi/src/utils/: index.doctree
docs/_build/doctrees/autoapi/src/utils/CustomLoggerFormatter/: index.doctree
docs/_build/doctrees/autoapi/src/utils/actionQ/: index.doctree
docs/_build/doctrees/autoapi/src/utils/adb/: index.doctree
docs/_build/doctrees/autoapi/src/utils/apk_downloader/: index.doctree
docs/_build/doctrees/autoapi/src/utils/ccl_abx/: index.doctree
docs/_build/doctrees/autoapi/src/utils/file_diff/: index.doctree
docs/_build/doctrees/autoapi/src/utils/frida_manager/: index.doctree
docs/_build/doctrees/autoapi/src/utils/fridump/: index.doctree
docs/_build/doctrees/autoapi/src/utils/pdf_report/: index.doctree
docs/_build/doctrees/autoapi/src/utils/timeline_generator/: index.doctree
docs/_build/doctrees/autoapi/src/utils/toolbox/: index.doctree
docs/_build/doctrees/source/: modules.doctree
docs/_build/html/: .buildinfo  genindex.html  groundtruthapk.html  index.html  instructions.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.datagather.html  src.functionality.html  src.html  src.utils.html
docs/_build/html/_sources/: groundtruthapk.md.txt  instructions.md.txt  modules.rst.txt
docs/_build/html/_sources/autoapi/src/: index.rst.txt
docs/_build/html/_sources/autoapi/src/datagather/: index.rst.txt
docs/_build/html/_sources/autoapi/src/functionality/: index.rst.txt
docs/_build/html/_sources/autoapi/src/utils/: index.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt
docs/_build/html/_static/: agogo.css  documentation_options.js
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/src/: index.html
docs/_build/html/autoapi/src/datagather/: index.html
docs/_build/html/autoapi/src/datagather/changedfiles/: index.html
docs/_build/html/autoapi/src/datagather/datagather/: index.html
docs/_build/html/autoapi/src/datagather/deletedfiles/: index.html
docs/_build/html/autoapi/src/datagather/malwaremonitor/: index.html
docs/_build/html/autoapi/src/datagather/network/: index.html
docs/_build/html/autoapi/src/datagather/newfiles/: index.html
docs/_build/html/autoapi/src/datagather/processes/: index.html
docs/_build/html/autoapi/src/datagather/sockets/: index.html
docs/_build/html/autoapi/src/datagather/static_analysis/: index.html
docs/_build/html/autoapi/src/functionality/: index.html
docs/_build/html/autoapi/src/functionality/functionality/: index.html
docs/_build/html/autoapi/src/functionality/player/: index.html
docs/_build/html/autoapi/src/utils/: index.html
docs/_build/html/autoapi/src/utils/actionQ/: index.html
docs/_build/html/source/: modules.html
ground_truth_src/: settings.gradle.kts
ground_truth_src/app/: build.gradle.kts
ground_truth_src/app/src/main/: AndroidManifest.xml
ground_truth_src/app/src/main/res/layout/: activity_main.xml
ground_truth_src/app/src/main/res/values/: strings.xml  themes.xml
ground_truth_src/app/src/main/res/values-night/: themes.xml
ground_truth_src/gradle/wrapper/: gradle-wrapper.properties
simple/: index.html
src/datagather/: changedfiles.py  datagather.py  deletedfiles.py  fritap.py  malwaremonitor.py  network.py  newfiles.py  processes.py  sockets.py  static_analysis.py
src/functionality/: functionality.py  player.py  recorder.py  screenshot.py  trigdroid.py
src/sandroid/: __about.py  __init__.py  _version.py  cli.py
src/sandroid/config/: cli.py  loader.py  schema.py
src/utils/: AI_processing.py  CustomLoggerFormatter.py  actionQ.py  adb.py  apk_downloader.py  ccl_abx.py  emulator.py  file_diff.py  frida_manager.py  fridump.py  fsmon.py  pdf_report.py  timeline_generator.py  toolbox.py
(+43 files in other folders)
